[project]
name = "notion-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.9.0",
    "langchain-community>=0.3.2",
    "langchain-openai>=0.2.2",
    "langchain>=0.3.3",
    "openai>=1.51.2",
    "streamlit>=1.39.0",
    "tiktoken>=0.8.0",
]
